@@ -39,10 +39,6 @@ DIST emacs-18.59-linux22x-elf-glibc21.diff.gz 15671 RMD160 4fab87eead1a66d767d23
 DIST emacs-18.59.tar.gz 2962652 RMD160 4976d0f0f34b6d54db6774d24a528f74a3bb20dc SHA1 15b25bf130e3eeb91f3eea8c01a3dec9aabf23cc SHA256 1e27e33f91984a91e9b4c1f21433f931aba03670960ecc147bb6d7b0de0f051e
 DIST emacs-21.4a.tar.gz 20403483 RMD160 c312e739935b56d08783bbfe97992297a363cb8a SHA1 cdb33731180fe4a912838af805dd35e3f55394d4 SHA256 1d50ddae117c48d689a3d772e390569edccfdc22168be0112d2093bd2d7c3216
 DIST leim-21.4.tar.gz 3291433 RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca SHA1 dd63f9aca1a58d40d9d426dd410fb627230974f7 SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b
-EBUILD emacs-18.59-r2.ebuild 2426 RMD160 5aefcffe373d6f8cef4ee2da2155a9e87b1bf6d9 SHA1 a20d4994f28c0bedb32bef3254ecbbd1c02804c1 SHA256 438e7afa0e9c99ad232e86b21503e18bbe65d79f9fd85f9adc86d11b5f4cd762
-MD5 0ec47d4b56fb359319372542b5da2556 emacs-18.59-r2.ebuild 2426
-RMD160 5aefcffe373d6f8cef4ee2da2155a9e87b1bf6d9 emacs-18.59-r2.ebuild 2426
-SHA256 438e7afa0e9c99ad232e86b21503e18bbe65d79f9fd85f9adc86d11b5f4cd762 emacs-18.59-r2.ebuild 2426
 EBUILD emacs-18.59-r3.ebuild 2465 RMD160 87dafe0fcdc9631503d860a1151acd946ce14aba SHA1 24ada21cade843044bef9bcf8339d8d0aab16b3e SHA256 910740f3502ac9652df9a2ddb5df720c2fff500354a1b4bb3cf4916422354e52
 MD5 cd9890c79aa5fb5e92b6630bc206b199 emacs-18.59-r3.ebuild 2465
 RMD160 87dafe0fcdc9631503d860a1151acd946ce14aba emacs-18.59-r3.ebuild 2465
@@ -51,27 +47,17 @@ EBUILD emacs-21.4-r10.ebuild 4924 RMD160 f580c765ff5f83395515cceb6b572d4a14f1827
 MD5 93958a02292db0daec7fb3ac69482609 emacs-21.4-r10.ebuild 4924
 RMD160 f580c765ff5f83395515cceb6b572d4a14f18276 emacs-21.4-r10.ebuild 4924
 SHA256 b3217487824bcf29832af753dd528ee2aab0f1e7e0a55a5fca772046ad604b9f emacs-21.4-r10.ebuild 4924
-EBUILD emacs-21.4-r9.ebuild 4843 RMD160 c235b41102c152c6d9f76113242e314ca1b04be0 SHA1 e020cdecb19d9ebf5656ecc4192a12b94a20bed8 SHA256 35e1af0dcd06f40cc99975b125cf765b629032761c8b746324eb23065e1b4729
-MD5 4f9c26bcae9dcbdd7087baa3a3e7f128 emacs-21.4-r9.ebuild 4843
-RMD160 c235b41102c152c6d9f76113242e314ca1b04be0 emacs-21.4-r9.ebuild 4843
-SHA256 35e1af0dcd06f40cc99975b125cf765b629032761c8b746324eb23065e1b4729 emacs-21.4-r9.ebuild 4843
-MISC ChangeLog 2009 RMD160 105b6db1253b0114343f27bbf3fee9e7b8f22341 SHA1 438cd32ed980c63125434ffcba472d741f0ee2d8 SHA256 6842719a1730598e524bff21e21350cf72326288f4854207be98da47b1b73370
-MD5 5fb15242df0bed031b8a997a1acbb52d ChangeLog 2009
-RMD160 105b6db1253b0114343f27bbf3fee9e7b8f22341 ChangeLog 2009
-SHA256 6842719a1730598e524bff21e21350cf72326288f4854207be98da47b1b73370 ChangeLog 2009
+MISC ChangeLog 2125 RMD160 d55bd78f3b29d9b73e5c3f2cb0b6b088f6b1fc8f SHA1 3c6f82d0d84c99ec3306960fcc7cf262fe2b8b91 SHA256 f8b2bae54ce2c0ac332181ee920e65f68f32b3ce0e65042a1287023041bf6095
+MD5 52e98404e72d21c1c7a90d95cac23413 ChangeLog 2125
+RMD160 d55bd78f3b29d9b73e5c3f2cb0b6b088f6b1fc8f ChangeLog 2125
+SHA256 f8b2bae54ce2c0ac332181ee920e65f68f32b3ce0e65042a1287023041bf6095 ChangeLog 2125
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata.xml 158
-MD5 6bd3531350f6b7c7682351e3dcf628d0 files/digest-emacs-18.59-r2 786
-RMD160 4d1f0a68da522f0bfbe8cebdb748c5f95ccc1c9d files/digest-emacs-18.59-r2 786
-SHA256 a5d7f43b69d68028793ee45424a1fce37e65dd63802310ebfda5ca85a62e9ba7 files/digest-emacs-18.59-r2 786
 MD5 6bd3531350f6b7c7682351e3dcf628d0 files/digest-emacs-18.59-r3 786
 RMD160 4d1f0a68da522f0bfbe8cebdb748c5f95ccc1c9d files/digest-emacs-18.59-r3 786
 SHA256 a5d7f43b69d68028793ee45424a1fce37e65dd63802310ebfda5ca85a62e9ba7 files/digest-emacs-18.59-r3 786
 MD5 6276bfdc37e540127a083cc6b979ac37 files/digest-emacs-21.4-r10 473
 RMD160 4f6aee1102af50b44f69f8de5714c901c5b6b15c files/digest-emacs-21.4-r10 473
 SHA256 8dec85daf40abb62a8c6a7232b067f0e5da524b222d2668f8db0f1df9dd7188e files/digest-emacs-21.4-r10 473
-MD5 6276bfdc37e540127a083cc6b979ac37 files/digest-emacs-21.4-r9 473
-RMD160 4f6aee1102af50b44f69f8de5714c901c5b6b15c files/digest-emacs-21.4-r9 473
-SHA256 8dec85daf40abb62a8c6a7232b067f0e5da524b222d2668f8db0f1df9dd7188e files/digest-emacs-21.4-r9 473
