@@ -1,9 +1,0 @@
-MD5 f61420b327a9753e57b14fb1d3dae826 emacs-18-patches.tar.bz2 16526
-RMD160 ab0ed5e428fd71f24f44b43945940d7d33670e81 emacs-18-patches.tar.bz2 16526
-SHA256 d8dd29786dbd202b5e7bb3a176d97ae0901b6c1dd4276e253f0f42fcef34cd6e emacs-18-patches.tar.bz2 16526
-MD5 a7a4ed051dc232cdc9cf37208135302a emacs-18.59-linux22x-elf-glibc21.diff.gz 15671
-RMD160 4fab87eead1a66d767d2334d31507695dcf7b4a8 emacs-18.59-linux22x-elf-glibc21.diff.gz 15671
-SHA256 fb810d893938883d50a3a8d7c43fbeb1604d5454f760b8f1f700326c8ee659dd emacs-18.59-linux22x-elf-glibc21.diff.gz 15671
-MD5 ca57ae095ef098faca135bca736e1ca8 emacs-18.59.tar.gz 2962652
-RMD160 4976d0f0f34b6d54db6774d24a528f74a3bb20dc emacs-18.59.tar.gz 2962652
-SHA256 1e27e33f91984a91e9b4c1f21433f931aba03670960ecc147bb6d7b0de0f051e emacs-18.59.tar.gz 2962652
