@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
+  -emacs-18.59-r2.ebuild, -emacs-21.4-r9.ebuild:
+  clean up
+
   24 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> emacs-21.4-r10.ebuild:
   Install emacsclient.1 man page (#165466).
 
